NAVBAR-misc-40a15.8: Added slot numbers in Hangar que to NavBar button

--- a/design/templates/OpenGame/topnav.tpl.html
+++ b/design/templates/OpenGame/topnav.tpl.html
@@ -106,7 +106,7 @@
               <!-- IF $QUE_NOT_EMPTY -->
                 <span class="alpha50" style="position: absolute; width: 100%; height: 100%;left: 0; top: 0; vertical-align: middle; display: flex; align-items: center; justify-content: center;" >
                   <div>
-                    <div>{L_sys_total_time_short}</div>
+                    <div>{L_que_slot_length}&nbsp;<span id="topnav_{$QUE_ID}_slots"></span></div>
                     <div id="topnav_{$QUE_ID}_total" style="color: red"></div>
                     <div id="topnav_{$QUE_ID}"></div>
 
