UNI-feat-40a15.12: Reduced size of Universe page output. Also some changes

--- a/design/templates/OpenGame/_template.css
+++ b/design/templates/OpenGame/_template.css
@@ -1859,3 +1859,8 @@ div .ui-dialog-content table {
 td.error_message {
   background-color     : #415680;
 }
+
+.planet_template div {
+  display: block;
+  max-width: 11em;
+}
