UNI-feat-40a15.13: Reworked popups for players and Alliances

--- a/design/templates/OpenGame/_template.css
+++ b/design/templates/OpenGame/_template.css
@@ -1864,3 +1864,13 @@ td.error_message {
   display: block;
   max-width: 11em;
 }
+
+.user_template div {
+  display: block;
+  max-width: 20em;
+}
+
+.ally_template div {
+  display: block;
+  max-width: 20em;
+}
