--- a/design/templates/OpenGame/universe.tpl.html
+++ b/design/templates/OpenGame/universe.tpl.html
@@ -112,265 +112,11 @@ uni_row[{galaxyrow.PLANET_NUM}] = {
   </tbody></table>
 </form>
 
-<table width=595 id="universe_main"><tbody>
-  <tr><th class="c_l" colspan="{COL_SPAN}">
-    {L_sys_galaxy}&nbsp;{galaxy} <span class="ok">{GALAXY_NAME}</span>&nbsp;<a class="link" href="galaxy.php?mode=name&galaxy={galaxy}&system=0"><!-- IF GALAXY_NAME -->{L_uni_rename}<!-- ELSE -->{L_uni_to_name}<!-- ENDIF --></a>
-    <span class="fr ok link_action" id="universe_legend">{L_Legend}</span>
-  </th></tr>
-
-  <tr><th class="c_l" colspan="{COL_SPAN}">
-    <span class="fl">{L_sys_system}&nbsp;[{galaxy}:{system}] <span class="ok">{SYSTEM_NAME}</span>&nbsp;<a class="link" href="galaxy.php?mode=name&galaxy={galaxy}&system={system}"><!-- IF SYSTEM_NAME -->{L_uni_rename}<!-- ELSE -->{L_uni_to_name}<!-- ENDIF --></a></span>
-    <span class="fr"><!-- IF planets -->{L_gal_planets} {planets}<!-- ELSE -->{L_gal_planetNone}<!-- ENDIF --></span>
-  </th></tr>
-
-  <tr class="c_c">
-    <th>{L_Pos}</th>
-    <th>{L_Planet}</th>
-    <th>{L_Name}</th>
-    <th>{L_Moon}</th>
-    <th>{L_uni_debris}</th>
-    <th>{L_Player}</th>
-    <th>{L_sys_alliance}</th>
-    <!-- IF ACT_SPY -->
-    <th><img src="design/images/icon_espionage.png" alt="{L_gl_espionner}" title="{L_gl_espionner}" style="height: 1.5em" /></th>
-    <!-- ENDIF -->
-    <!-- IF ACT_MISSILE -->
-    <th><img src="design/images/icon_missile.png" alt="{L_gl_mipattack}" title="{L_gl_mipattack}" style="height: 1.5em" /></th>
-    <!-- ENDIF -->
-    <!-- IF ACT_WRITE -->
-    <th><img src="design/images/icon_mail.gif" alt="{L_gl_sendmess}" title="{L_gl_sendmess}" style="height: 1.5em" /></th>
-    <!-- ENDIF -->
-    <!-- IF ACT_STATISTICS -->
-    <th><img src="{D_SN_ROOT_VIRTUAL}design/images/icon_statistics.png" alt="{L_gl_stats}" title="{L_gl_stats}" border=0 style="height: 1.5em" /></th>
-    <!-- ENDIF -->
-    <!-- IF ACT_INFO -->
-    <th><img src="{dpath}icons/menu_empire_emperor.png" alt="{L_stat_details}" title="{L_stat_details}" style="height: 1.5em" /></th>
-    <!-- ENDIF -->
-    <!-- IF ACT_FRIEND -->
-    <th><img src="{dpath}img/b.gif" alt="{L_gl_buddyreq}" title="{L_gl_buddyreq}" style="height: 1.5em" /></th>
-    <!-- ENDIF -->
-  </tr>
-<!-- BEGIN galaxyrow -->
-  <tr user_id="{galaxyrow.USER_ID}" ally_id="{galaxyrow.ALLY_ID}" planet_pos="{galaxyrow.PLANET_NUM}">
-    <!-- IF galaxyrow.PLANET_ID -->
-    <th width=30>
-      <!-- IF galaxyrow.PLANET_TYPE -->
-        {galaxyrow.PLANET_NUM}
-      <!-- ELSE -->
-        <a href="fleet.php?galaxy={galaxy}&system={system}&planet={galaxyrow.PLANET_NUM}&planettype=1&target_mission=7">{galaxyrow.PLANET_NUM}</a>
-      <!-- ENDIF -->
-    </th>
-    <th class="uni_show_planet" planet_type="{galaxyrow.PLANET_TYPE}" id="planet_{galaxyrow.PLANET_ID}">
-      <!-- IF galaxyrow.PLANET_ID -->
-        <div style="height: 2.75em; width: 2.75em">
-          <img src={dpath}planeten/small/s_{galaxyrow.PLANET_IMAGE}.jpg style="height: 2.75em; width: 2.75em" />
-          <!-- IF galaxyrow.PLANET_FLEET_ID -->
-          <img class="alpha25" src=design/images/icon_fleet_own.png style="height: 2.75em; width: 2.75em" />
-          <!-- ENDIF -->
-        </div>
-      <!-- ELSE -->
-        &nbsp;
-      <!-- ENDIF -->
-    </th>
-    <th nowrap>
-      <!-- IF galaxyrow.PLANET_ID -->
-        <div class="g_galaxy_row">
-          <!-- IF galaxyrow.PLANET_DESTROYED -->
-            {L_gl_destroyedplanet}
-          <!-- ELSE -->
-            <!-- DEFINE $PLANET_ACTIVITY = '' -->
-            <!-- IF USER_ID == galaxyrow.USER_ID -->
-              <!-- DEFINE $PLANET_CLASS = 'myplanet' -->
-            <!-- ELSE -->
-              <!-- IF ALLY_ID == galaxyrow.ALLY_ID -->
-                <!-- DEFINE $PLANET_CLASS = 'allymember' -->
-              <!-- ELSE -->
-                <!-- DEFINE $PLANET_CLASS = '' -->
-              <!-- ENDIF -->
-
-              <!-- IF galaxyrow.PLANET_ACTIVITY < 15 -->
-                <!-- DEFINE $PLANET_ACTIVITY = '<15' -->
-              <!-- ELSEIF galaxyrow.PLANET_ACTIVITY < 60 -->
-                <!-- DEFINE $PLANET_ACTIVITY = '{galaxyrow.PLANET_ACTIVITY}' -->
-              <!-- ELSE -->
-                <!-- DEFINE $PLANET_ACTIVITY = '' -->
-              <!-- ENDIF -->
-            <!-- ENDIF -->
-
-            <!-- IF PLANET_PHALANX && galaxyrow.USER_ID != USER_ID-->
-              <!-- DEFINE $PLANET_CLASS_BUTTON = ' button_pseudo' -->
-              <!-- DEFINE $PLANET_GO = ' go="phalanx" target="_blank"' -->
-            <!-- ELSE -->
-              <!-- DEFINE $PLANET_CLASS_BUTTON = '' -->
-              <!-- DEFINE $PLANET_GO = '' -->
-            <!-- ENDIF -->
-              <span class="{$PLANET_CLASS}{$PLANET_CLASS_BUTTON}"{$PLANET_GO}>
-                {galaxyrow.PLANET_NAME}<!-- IF $PLANET_ACTIVITY -->&nbsp;({$PLANET_ACTIVITY}&nbsp;{L_sys_min_short})<!-- ENDIF -->
-              </span>
-          <!-- ENDIF -->
-        </div>
-      <!-- ENDIF -->
-    </th>
-    <th class="uni_show_planet" planet_type="{D_PT_MOON}">
-      <!-- IF galaxyrow.MOON_DIAMETER -->
-        <div style="height: 2.75em; width: 2.75em">
-          <img src={dpath}planeten/small/s_{galaxyrow.MOON_IMAGE}.jpg style="height: 2.75em; width: 2.75em" />
-          <!-- IF galaxyrow.MOON_FLEET_ID -->
-          <img class="alpha25" src=design/images/icon_fleet_own.png style="height: 2.75em; width: 2.75em" />
-          <!-- ENDIF -->
-        </div>
-      <!-- ELSE -->
-        &nbsp;
-      <!-- ENDIF -->
-    </th>
-      
-    <!-- IF galaxyrow.DEBRIS >= 10000000 -->
-      <!-- DEFINE $DEBRIS_BKG = 'rgb(100, 0, 0)' -->
-    <!-- ELSEIF galaxyrow.DEBRIS >= 1000000 -->
-      <!-- DEFINE $DEBRIS_BKG = 'rgb(100, 100, 0)' -->
-    <!-- ELSEIF galaxyrow.DEBRIS >= 100000 -->
-      <!-- DEFINE $DEBRIS_BKG = 'rgb(0, 100, 0)' -->
-    <!-- ELSE -->
-      <!-- DEFINE $DEBRIS_BKG = '' -->
-    <!-- ENDIF -->
-
-    <td class="c_c uni_show_debris" style="background-color: {$DEBRIS_BKG};">
-      <!-- IF galaxyrow.DEBRIS -->
-        <div style="height: 2.75em; width: 2.75em">
-          <img src="{dpath}planeten/debris.jpg" style="height: 100%; width: 100%" />
-          <!-- IF ! galaxyrow.DEBRIS_RESERVED_PERCENT -->
-            <!-- DEFINE $DEBRIS_FONT_CLASS = 'error' -->
-          <!-- ELSEIF galaxyrow.DEBRIS_RESERVED_PERCENT == 100 -->
-            <!-- DEFINE $DEBRIS_FONT_CLASS = 'ok' -->
-          <!-- ELSEIF galaxyrow.DEBRIS_GATHER_TOTAL_PERCENT == 100 -->
-            <!-- DEFINE $DEBRIS_FONT_CLASS = 'notice' -->
-          <!-- ELSE -->
-            <!-- DEFINE $DEBRIS_FONT_CLASS = 'warning' -->
-          <!-- ENDIF -->
-          <span class="icon_alpha {$DEBRIS_FONT_CLASS}">{galaxyrow.DEBRIS_RESERVED_PERCENT}%</span>
-        </div>
-      <!-- ELSE -->
-        &nbsp;
-      <!-- ENDIF -->
-    </td>
-
-    <!-- IF galaxyrow.USER_ACTIVITY >= 28 -->
-      <!-- DEFINE $FONT_TYPE = 'longinactive' -->
-    <!-- ELSEIF galaxyrow.USER_ACTIVITY >= 7 -->
-      <!-- DEFINE $FONT_TYPE = 'inactive' -->
-    <!-- ELSE -->
-      <!-- DEFINE $FONT_TYPE = 'player_active' -->
-    <!-- ENDIF -->
-
-    <!-- IF galaxyrow.USER_BANNED -->
-      <!-- DEFINE $USER_CLASS = 'banned' -->
-    <!-- ELSEIF galaxyrow.USER_VACATION -->
-      <!-- DEFINE $USER_CLASS = 'vacation' -->
-    <!-- ELSEIF galaxyrow.USER_PROTECTED -->
-      <!-- DEFINE $USER_CLASS = 'protected' -->
-    <!-- ELSEIF galaxyrow.USER_NOOB -->
-      <!-- DEFINE $USER_CLASS = 'noob' -->
-    <!-- ELSEIF galaxyrow.USER_STRONG -->
-      <!-- DEFINE $USER_CLASS = 'strong' -->
-    <!-- ELSE -->
-      <!-- DEFINE $USER_CLASS = '' -->
-    <!-- ENDIF -->
-
-    <th width=150 align=center nowrap class="uni_show_user">
-      <!-- IF galaxyrow.USER_ID -->
-        <span<!-- IF galaxyrow.USER_ID != USER_ID --> class="link_action"<!-- ENDIF -->>
-        <!-- IF galaxyrow.USER_BIRTHDAY --><img src="{D_SN_ROOT_VIRTUAL}design/images/birthday.png" alt="{galaxyrow.USER_BIRTHDAY}" title="{galaxyrow.USER_BIRTHDAY}">&nbsp;<!-- ENDIF --><span class="{$USER_CLASS} {$FONT_TYPE}">{galaxyrow.USER_NAME}</span>&nbsp;(<!-- IF SHOW_ADMIN && galaxyrow.USER_AUTH && galaxyrow.USER_ADMIN --><span class="admin">{galaxyrow.USER_ADMIN}</span><!-- ENDIF --><!-- IF galaxyrow.USER_BANNED --><span class="banned">{L_banned_shortcut}</span><!-- ENDIF --><!-- IF galaxyrow.USER_VACATION --><span class="vacation">{L_vacation_shortcut}</span><!-- ENDIF --><!-- IF galaxyrow.USER_ACTIVITY >= 28 --><span class="longinactive">{L_inactif_28_shortcut}</span><!-- ELSEIF galaxyrow.USER_ACTIVITY >= 7 --><span class="inactive">{L_inactif_7_shortcut}</span><!-- ELSE -->{L_active_shortcut}<!-- ENDIF --><!-- IF galaxyrow.USER_PROTECTED --><span class="protected">{L_uni_protected_player_shortcut}</span><!-- ENDIF --><!-- IF galaxyrow.USER_NOOB --><span class="noob">{L_weak_player_shortcut}</span><!-- ENDIF --><!-- IF galaxyrow.USER_STRONG --><span class="strong">{L_strong_player_shortcut}</span><!-- ENDIF -->)
-        </span>
-      <!-- ELSE -->
-        &nbsp;
-      <!-- ENDIF -->
-    </th>
-
-    <th width=80 nowrap class="uni_show_ally">
-      <!-- IF galaxyrow.ALLY_ID -->
-        <span class="link_action<!-- IF ALLY_ID == galaxyrow.ALLY_ID --> allymember<!-- ENDIF -->">[{galaxyrow.ALLY_TAG}]</span>
-      <!-- ELSE -->
-        &nbsp;
-      <!-- ENDIF -->
-    </th>
-    <!-- ELSE -->
-    <td colspan="7" class="c_c">
-      <span class="button_pseudo" go="fleet" planet_planet="{galaxyrow.PLANET_NUM}" mission="{D_MT_COLONIZE}">
-        {L_uni_colonize} {galaxyrow.PLANET_NUM}
-      </span>
-    </td>
-    <!-- ENDIF -->
-
-    <!-- IF galaxyrow.USER_ID && USER_ID != galaxyrow.USER_ID -->
-      <!-- DEFINE $DIFFERENT_USER = 1 -->
-    <!-- ELSE -->
-      <!-- DEFINE $DIFFERENT_USER = 0 -->
-    <!-- ENDIF -->
-
-    <!-- IF ACT_SPY -->
-    <td class="c_c">
-      <!-- IF $DIFFERENT_USER && (! galaxyrow.USER_NOOB || galaxyrow.USER_ATTACKABLE) -->
-      <img onclick="doit({D_MT_SPY}, {galaxyrow.PLANET_NUM}, 1, {ACT_SPIO});" src="design/images/icon_espionage.png" alt="{L_gl_espionner}" title="{L_gl_espionner}" style="height: 1.5em" />
-      <!-- ENDIF -->
-    </td>
-    <!-- ENDIF -->
-    <!-- IF ACT_MISSILE -->
-    <td class="c_c">
-      <!-- IF $DIFFERENT_USER && (! galaxyrow.USER_NOOB || galaxyrow.USER_ATTACKABLE) -->
-        <img planet_planet="{galaxyrow.PLANET_NUM}" class="missile_attack_prepare" src="design/images/icon_missile.png" alt="{L_gl_mipattack}" title="{L_gl_mipattack}" style="height: 1.5em" />
-      <!-- ENDIF -->
-    </td>
-    <!-- ENDIF -->
-    <!-- IF ACT_WRITE -->
-    <td class="c_c">
-      <!-- IF $DIFFERENT_USER -->
-      <a href="messages.php?mode=write&id={galaxyrow.USER_ID}"><img src="design/images/icon_mail.gif" alt="{L_gl_sendmess}" title="{L_gl_sendmess}" style="height: 1.5em" /></a>
-      <!-- ENDIF -->
-    </td>
-    <!-- ENDIF -->
-    <!-- IF ACT_STATISTICS -->
-    <td class="c_c">
-      <!-- IF $DIFFERENT_USER && galaxyrow.USER_RANK != '-' -->
-      <a href="stat.php?who=1&range={galaxyrow.USER_RANK}#{galaxyrow.USER_RANK}"><img src="{D_SN_ROOT_VIRTUAL}design/images/icon_statistics.png" alt="{L_Place} {galaxyrow.USER_RANK}/{userCount}" title="{L_Place} {galaxyrow.USER_RANK}/{userCount}" style="height: 1.5em" /></a>
-      <!-- ENDIF -->
-    </td>
-    <!-- ENDIF -->
-    <!-- IF ACT_INFO -->
-    <td class="c_c">
-      <!-- IF $DIFFERENT_USER -->
-      <a href="index.php?page=imperator&int_user_id={galaxyrow.USER_ID}"><img src="{dpath}icons/menu_empire_emperor.png" alt="{L_stat_details}" title="{L_stat_details}" style="height: 1.5em" /></a>
-      <!-- ENDIF -->
-    </td>
-    <!-- ENDIF -->
-    <!-- IF ACT_FRIEND -->
-    <td class="c_c">
-      <!-- IF $DIFFERENT_USER -->
-      <a href="buddy.php?request_user_id={galaxyrow.USER_ID}"><img src="{dpath}img/b.gif" alt="{L_gl_buddyreq}" title="{L_gl_buddyreq}" style="height: 1.5em" /></a>
-      <!-- ENDIF -->
-    </td>
-    <!-- ENDIF -->
-  </tr>
-<!-- END galaxyrow -->
-  <tr>
-    <th colspan="{COL_SPAN}" class="subheader">
-      <span class="button_pseudo ownexpedition" go="fleet" planet_planet="{PLANET_EXPEDITION}" mission="{D_MT_EXPLORE}">
-        {L_gf_unknowsp}
-      </span>
-    </th>
-  </tr>
-  <tr>
-    <td class=c colspan=3>
-      <span id="missile">{MIPs}</span> {L_gf_mi_title}
-    </td>
-    <td class=c colspan=3>
-      <span id="flt_recyclers">{PLANET_RECYCLERS_TEXT}</span> {L_gf_rc_title}
-    </td>
-    <td class=c colspan="{COL_SPAN_PLUS}">
-      <span id="flt_spies">{SPs}</span> {L_gf_sp_title}
-    </td>
-  </tr>
-  <tr style="display: none;" id="fleetstatusrow"><th class=c colspan="{COL_SPAN}"><table width="100%" id="fleetstatustable"></table></th></tr>
-</tbody></table>
+<!-- IF PLAYER_OPTION_UNIVERSE_OLD -->
+  <!-- INCLUDE universe_old -->
+<!-- ELSE -->
+  <!-- INCLUDE universe_new -->
+<!-- ENDIF -->
 
 <form id="uni_missile_form" style="display: none;" name="uni_missile_form" method=POST>
   <br>
@@ -406,12 +152,12 @@ uni_row[{galaxyrow.PLANET_NUM}] = {
       <tr class=allymember><td colspan=2>{L_uni_legend_allyplanet}</td></tr>
 
       <tr><th class="c_l" colspan=2>{L_sys_player}</th></tr>
-      <tr><td>{L_sys_birthday}</td><td><img src="{D_SN_ROOT_VIRTUAL}design/images/birthday.png" alt="{galaxyrow.USER_BIRTHDAY}" title="{galaxyrow.USER_BIRTHDAY}"></td></tr>
+      <tr><td>{L_sys_birthday}</td><td><span class="birthday">&nbsp;</span></td></tr>
+      <tr><td>{L_Way_vacation}</td><td><span class=vacation>&nbsp;</span></td></tr>
       <tr class=protected><td>{L_uni_protected_player}</td><td>{L_uni_protected_player_shortcut}</td></tr>
       <tr class=noob><td>{L_Weak_player}</td><td>{L_weak_player_shortcut}</td></tr>
       <tr class=strong><td>{L_Strong_player}</td><td>{L_strong_player_shortcut}</td></tr>
-      <tr class=vacation><td>{L_Way_vacation}</td><td>{L_vacation_shortcut}</td></tr>
-      <tr class=banned><td>{L_Pendent_user}</td><td>{L_banned_shortcut}</td></tr>
+      <tr class="banned"><td colspan="2">{L_Pendent_user}</td></tr>
       <tr class=player_active><td>{L_Active}</td><td>{L_active_shortcut}</td></tr>
       <tr class=inactive><td>{L_Inactive_7_days}</td><td>{L_inactif_7_shortcut}</td></tr>
       <tr class=longinactive><td>{L_Inactive_28_days}</td><td>{L_inactif_28_shortcut}</td></tr>
